--- a/S05.01-Exercise-AsyncTaskLoader/app/src/main/res/menu/forecast.xml
+++ b/S05.01-Exercise-AsyncTaskLoader/app/src/main/res/menu/forecast.xml
@@ -21,9 +21,8 @@
       tools:context=".MainActivity">
     <item
         android:id="@+id/action_refresh"
-        android:orderInCategory="1"
         android:title="@string/action_refresh"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="never"/>
     <item
         android:id="@+id/action_map"
         android:title="@string/action_map"
