--- a/S06.01-Exercise-LaunchSettingsActivity/app/src/main/res/menu/detail.xml
+++ b/S06.01-Exercise-LaunchSettingsActivity/app/src/main/res/menu/detail.xml
@@ -22,6 +22,11 @@
         android:title="@string/action_share"
         app:showAsAction="always"/>
 
-    <!--TODO (5) Add a Settings option to the detail menu-->
-
+    <!--COMPLETED (5) Add a Settings option to the detail menu-->
+    <item
+        android:id="@+id/action_settings2"
+        android:orderInCategory="1"
+        android:title="@string/action_settings"
+        app:showAsAction="never"
+        />
 </menu>
